          - MatrixFactorization: use method from Eval namespace to compute fit
          - UserItemBaseline: use several iterations of alternating
            optimization instead of just one; implement IIterativeModel
	- command-line tools
          - item prediction: rename --predict-for-users-file to
            --relevant-users for consistency with --relevant-items
          - write out predictions every N iterations with --prediction-file=F
            and --find-iter=N (bug reported by Alejandro Bellogin)
          - write loading time to STDERR, not STDOUT
          - support online evaluation (see below)
	- evaluation
          - RatingEval
            - add EvaluateOnline() method
            - rename RatingPredictionMeasures to Measures
          - ItemPredictionEval
            - add EvaluateOnline() method
            - rename ItemPredictionMeasures to Measures
        - data structures
          - add interfaces IBooleanMatrix and IPosOnlyFeedback
          - make PosOnlyFeedback generic to allow different backends
          - add SparseBooleanMatrixBinarySearch and SparseBooleanMatrixStatic
          - IMatrix<T> interface: add Transpose() method
          - SparseBooleanMatrix: remove Rows() method (not necessary)
          - Matrix<T>: perform bounds check only when DEBUG is set;
            faster GetRow()/SetRow(); generic return types
          - MatrixUtils: remove ContainsNaN()
          - VectorUtils: add L1Norm()
          - fix bug in Ratings that prevented online updates to work properly
            (reported by Chris Newell)
	- documentation
          - some API doc improvements
          - get rid of the word 'engine', as it usually carries no relevant
            information
	- misc
          - move GridSearch to experimental section
          - add Nelder-Mead algorithm for hyperparameter selection; currently
            only rating prediction is supported (experimental)

1.02	2011-05-24
	- recommenders