@@ -19,6 +19,8 @@
 	- command-line tools
           - item prediction: rename --predict-for-users-file to
             --relevant-users for consistency with --relevant-items
+          - rating prediction: support all IIterativeModel recommenders, not
+            just the ones derived from MatrixFactorization
           - write out predictions every N iterations with --prediction-file=F
             and --find-iter=N (bug reported by Alejandro Bellogin)
           - write loading time to STDERR, not STDOUT
